[package]
name = "bevy-dmabuf"
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Schmarni-Dev/bevy-dmabuf/"

[dependencies]
ash = "0.38.0"
bevy = { version = "0.16", features = [], default-features = true }
color-eyre = "0.6.3"
drm-fourcc = "2.2.0"
thiserror = "2.0.12"
vulkano = "0.35.1"
wgpu = "24"
zbus = "5.7.0"
serde = { version = "1", features = ["derive"] }

[workspace]
members = ["example_usages"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
