[package]
name = "bevy-dmabuf"
version = "0.2.0"
edition = "2024"
license = "MIT/Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Schmarni-Dev/bevy-dmabuf/"
description = "allows importing linux dmabufs into a bevy image"
keywords = ["bevy", "dmabuf", "dmatex"]

[dependencies]
ash = "0.38.0"
bevy = { version = "0.16", features = [
	"bevy_render",
	"bevy_image",
	"bevy_pbr",
	"bevy_asset",
], default-features = false }
color-eyre = "0.6.3"
drm-fourcc = "2.2.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"
tracing = { version = "0.1", default-features = false }
wgpu = "24"
zvariant = "5.7.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
bevy = { version = "0.16", default-features = true }
zbus = "5.11.0"

[workspace]
members = ["example_usages"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
